# diem-backend

./: Cargo.toml
migrations/: 20260516123114_create_users.sql  20260605133920_create_check_ins.sql
src/: lib.rs  main.rs
src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  routes.rs
src/checkins/: handlers.rs  routes.rs
src/config/: mod.rs
src/errors/: mod.rs
src/health/: handlers.rs  routes.rs
src/users/: handlers.rs  routes.rs
tests/: checkins_test.rs
tests/common/: mod.rs
